# Cuidamed

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  api.py  main.py  medicamentos.py  supabase_repository.py
supabase/migrations/: 20260514024319_create_medicamentos_table.sql
tests/: test_integracao.py  test_medicamentos.py  test_supabase_storage.py
