[project]
name = "cuidamed"
version = "2.0.0"
description = "Gerenciador de horarios de medicamentos para idosos e cuidadores"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "streamlit>=1.33.0",
    "supabase>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
